--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         
       </div>
     </div>
-
+<p><a href="https://github.com/morgane2089/my_weather_app">Open-source code</a> by Morgane Oberzusser </p>
     <script src="src/script.js"></script>
   </body>
 </html>
